# soccer-tourney-poster

./: .gitignore  .gitmodules  2018-world-cup-raw.csv  2022-world-cup.xlsx  2022-world-cup.yaml  CLAUDE-coding-c.md  CLAUDE-coding-python.md  CLAUDE-coding.md  LICENSE  common.py  config.py  database.py  devenv.nix  doc.py  image.py  justfile  loc.py  main.py  metrics.py  page.py  pdf.py  pyproject.toml  readme.md  requirements.txt  soccer-tourney-poster.code-workspace  todo.md  unwind-xlsx.py  versioning.py
.claude/: CLAUDE.md
database/: 2018-mens-world-cup.xlsx  2022-mens-world-cup.xlsx  2023-womens-world-cup.xlsx  2024-mens-copa-america.xlsx  2024-mens-euro.xlsx  2025-mens-club-world-cup.xlsx  2026-mens-world-cup.xlsx  localization.xlsx
database/source-data/: 2025-12-13-paper-sizes.xlsx  CopaAmerica2024FixturesFE-V2.53-Letter.xlsx
fonts/: localization.xlsx
fonts/cleaner/: main.py
scripts/: potpo.py
src/dbq/: __init__.py  __main__.py  main.py
src/rcs/: __init__.py  __main__.py  common.py  doc.py  image.py  util.py
src/stp/: __init__.py  __main__.py  bracket.py  calendar.py  config.py  config.yaml  database.py  dbq.py  fonts.py  group.py  loc.py  main.py  page.py  profile_diff.py  profiling.py  versioning.py
src/stp/database/: 2018-mens-world-cup.xlsx  2022-mens-world-cup.xlsx  2023-womens-world-cup.xlsx  2024-mens-copa-america.xlsx  2024-mens-euro.xlsx  2025-mens-club-world-cup.xlsx  2026-mens-world-cup.xlsx  localization.xlsx
src/stp/database/source-data/2010-mens-world-cup/: history.htm
src/stp/localization/: stp-ar.po  stp-cs.po  stp-de.po  stp-el.po  stp-en_gb.po  stp-es.po  stp-fa.po  stp-fr.po  stp-hr.po  stp-id.po  stp-in.po  stp-it.po  stp-ja.po  stp-ko.po  stp-nb.po  stp-nl.po  stp-no.po  stp-pl.po  stp-pt.po  stp-ru.po  stp-sv.po  stp-sw.po  stp-tr.po  stp-uz.po  stp-vi.po  stp-zh_hans.po  stp-zh_hant.po  stp.pot
tournaments/: 2018-mens-world-cup.xlsx  2022-mens-world-cup.xlsx  2023-womens-world-cup.xlsx  2024-mens-copa-america.xlsx  2024-mens-euro.xlsx  2025-mens-club-world-cup.xlsx  2026-mens-world-cup.xlsx
tournaments/source-data/: 2024-mens-copa-america-work.xlsx  2024-mens-euro-work.xlsx  2025-12-13-paper-sizes.xlsx  2025-club-world-cup-matches.txt  Euro 2024 Fixtures V2.51 - Model 3 - Fully Editable - Letter - Logo.xlsx  WCup_2026_2.6_en.xlsx  WCup_2026_2.7_en.xlsx  WCup_2026_3.3_en.xlsx  world_cup_2026_schedule-from-claude-via-al-jazeera.csv  world_cup_2026_schedule_utc.csv
