[project]
name = "soccer-tourney-poster"
version = "0.1.0"
description = "Generates PDF posters of soccer tournament schedules"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "arabic-reshaper>=3.0.0",
    "arrow>=1.3.0",
    "babel>=2.16.0",
    "bolay",
    "defusedxml>=0.7.1",
    "et-xmlfile>=2.0.0",
    "fonttools>=4.55.2",
    "fpdf2>=2.8.1",
    "openpyxl>=3.1.5",
    "pillow>=11.0.0",
    "python-bidi>=0.6.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "six>=1.17.0",
    "types-python-dateutil>=2.9.0.20241206",
    "unicategories>=0.1.2",
]

[tool.uv.sources]
bolay = { workspace = true, editable = true }
