[project]
name = "stp"
version = "0.3.0"
description = "Generate PDF posters for soccer tournament schedules"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "arabic-reshaper>=3.0.0",
    "arrow>=1.4.0",
    "babel>=2.17.0",
    "bolay",
    "defusedxml>=0.7.1",
    "et-xmlfile>=2.0.0",
    "fonttools>=4.61.1",
    "fpdf2>=2.8.5",
    "icecream>=2.1.8",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-bidi>=0.6.7",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "six>=1.17.0",
    "typed-argument-parser>=1.11.0",
    "types-python-dateutil>=2.9.0.20251115",
    "tzdata>=2025.3",
    "unicategories>=0.1.2",
]

[project.scripts]
stp = "stp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stp"]

[tool.uv.workspace]
members = ["bolay"]

[tool.uv.sources]
bolay = { workspace = true }
